--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.24.4",
+    "@icon-park/react": "^1.4.2",
+    "@iconify/react": "^6.0.2",
     "@nutui/nutui-react-taro": "^3.0.19-cpp.17",
     "@tarojs/components": "4.0.9",
     "@tarojs/helper": "4.0.9",
